k8s/client-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: component
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
