k8s/server-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - name: server
      protocol: TCP
      port: 8080
      targetPort: 8080
